# keyd-remapper

./: .gitignore  README.md  SESSION_CHECKPOINT.md  keyd-remapper.spec  launch.py  package-lock.json  package.json  pyinstaller_entry.py
backend/: __init__.py  firmware_searcher.py  keyboard_detector.py  keyd_manager.py  main.py  requirements.txt  websocket_monitor.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
