[package]
name = "keyd-remapper"
version = "1.0.0"
description = "Keyd Remapper Desktop App"
authors = ["keyd-remapper"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
